--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,119 @@
-.App {
-  text-align: center;
+.websites-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.website-preview {
+  width: 300px; /* Fixed width for uniform size */
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.website-image {
+  width: 100%;
+  height: 200px; /* Fixed height for uniform size */
+  object-fit: cover; /* Ensures image covers the area nicely */
+}
+
+.info-pane {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 10px;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.website-preview:hover .info-pane {
+  transform: translateY(0);
+}
+
+.website-title {
+  font-size: 18px;
+  margin: 0;
+}
+
+.website-info {
+  font-size: 14px;
+  margin: 5px 0 0;
+}
+
+.parallax-container {
+  position: relative;
+  overflow: hidden;
+  height: 100vh; /* This can be adjusted based on your design */
+}
+
+.parallax-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+}
+
+.parallax-layer-back {
+  transform: translateZ(-3px) scale(4);
+  /* Background SVG styling (e.g., mountains) */
+}
+
+.parallax-layer-mid {
+  transform: translateZ(-2px) scale(3);
+  /* Mid-ground SVG styling (e.g., smaller hills, trees) */
+}
+
+.parallax-layer-front {
+  transform: translateZ(-1px) scale(2);
+  /* Foreground SVG styling (e.g., detailed elements like close-up trees, snowflakes) */
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.App-header h2 {
+  font-size: 2.5rem;
+  margin-bottom: 15px;
+}
+
+.social-links {
+  display: inline-flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.social-link {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  font-size: 1.2rem;
+  color: #007bff;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.social-link span {
+  margin-left: 8px;
+}
+
+.github-link:hover {
+  color: #333; /* Darker color for GitHub hover */
+}
+
+.linkedin-link:hover {
+  color: #0072b1; /* LinkedIn brand color for hover */
+}
+
+.social-link .faGithub, .social-link .faLinkedin {
+  font-size: 24px;
 }
