--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,83 @@
+html {
+  background-color: rgb(215, 213, 218);
+}
+
+.App {
+  display: flex;
+  justify-content: center;
+}
+
+.content {
+  width: 90%;
+  max-width: 1110px;
+  background-color: gray;
+}
+
 .websites-container {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   gap: 20px;
+  padding-top: 33px;
+  padding-bottom: 33px;
+}
+
+.websites-container-info {
+  border: 44px solid black;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding-top: 33px;
+  padding-bottom: 33px;
+}
+
+.websites-container-content {
+  padding-top: 33px;
+  padding-bottom: 33px;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.websites-container-content2 {
+  padding-bottom: 33px;
+  font-size: 1.5em;
+  text-align: left;
+}
+
+.websites-container-content2 ul {
+  /* Remove default list styling */
+  list-style-type: none;
+  padding-left: 45px;
+  padding-right: 45px;
+}
+
+.websites-container-content2 ul li {
+  /* Styling for each list item */
+  margin-bottom: 21px;
+  padding-left: 21px;
+  position: relative;
+  cursor: default;
+  transition: all 0.3s ease;
+}
+
+.websites-container-content2 ul li:before {
+  /* Custom bullet style */
+  content: '•';
+  position: absolute;
+  left: 0;
+  color: #007bff; /* Theme color for bullet */
+  font-size: 1.5rem;
+  line-height: 1; /* Align bullet with text */
+}
+
+.websites-container-content2 ul li:hover {
+  /* Animation on hover */
+  transform: translateX(10px);
+  color: #0056b3; /* Darker color on hover */
 }
 
 .website-preview {
@@ -11,6 +86,7 @@
   border-radius: 10px;
   overflow: hidden;
   position: relative;
+  z-index: 2;
 }
 
 .website-image {
@@ -38,6 +114,7 @@
 .website-title {
   font-size: 18px;
   margin: 0;
+  z-index: 2;
 }
 
 .website-info {
@@ -77,12 +154,20 @@
 
 .App-header {
   text-align: center;
-  margin-bottom: 20px;
 }
 
 .App-header h2 {
   font-size: 2.5rem;
   margin-bottom: 15px;
+}
+
+.email a {
+  text-decoration: none;
+}
+
+.email a:hover {
+  color: #333; /* Darker color for GitHub hover */
+  text-decoration: none;
 }
 
 .social-links {
@@ -100,6 +185,7 @@
   color: #007bff;
   text-decoration: none;
   transition: color 0.3s ease;
+  z-index: 2;
 }
 
 .social-link span {
@@ -116,4 +202,53 @@
 
 .social-link .faGithub, .social-link .faLinkedin {
   font-size: 24px;
+}
+
+#tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1; /* Behind other content */
+}
+
+.name-heading {
+  background-color: black;
+  padding-top: 33px;
+  padding-bottom: 33px;
+  color: white;
+  text-align: center;
+}
+
+.name-heading h2 {
+  font-size: 5em;
+  text-align: center;
+}
+
+.name-heading2 {
+  text-align: center;
+}
+
+.websites-container-name {
+  padding-top: 44px;
+  color: black;
+  text-align: center;
+  font-size: 2em;
+}
+
+.websites-container-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding-bottom: 33px;
+}
+
+.google-map-container {
+  width: 100%;
+  height: 400px;
+  padding-top: 9px;
+  padding-bottom: 33px;
 }
