--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,8 @@ html {
 }
 
 .website-title {
+  color: #E0FBFC;
+  font-style: italic;
   font-size: 18px;
   margin: 0;
   z-index: 2;
@@ -317,12 +319,16 @@ html {
 }
 
 .google-map-container {
-  width: 100%;
-  height: 400px;
   padding-top: 9px;
   padding-bottom: 33px;
 }
 
 .google-map-container iframe {
   z-index: 2;
+}
+
+@media (max-width: 792px) {
+  .google-map-container iframe {
+    width: 100%;
+  }
 }
