--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,21 @@
 /* Light theme vars*/
 :root[data-theme="light"] {
-  --background-color: #5C6B73;
+  --background-color: #899faa;
   --heading-color: #253237;
-  --container-color: #5C6B73;
+  --heading-text-color: #253237;
+  --container-color: #899faa;
   --text-color: #333;
   --link-color: #007bff;
   --border-color: #ddd;
-  --image-border-color: #ddd;
+  --image-border-color: #0f0c0c;
 }
 
 /* Dark theme vars*/
 :root[data-theme="dark"] {
   --background-color: #121212;
   --heading-color: #0e1416;
-  --container-color: #253237;
+  --heading-text-color: #050808;
+  --container-color: rgb(37, 50, 54);
   --text-color: #eee;
   --link-color: #1a91da;
   --border-color: #444;
@@ -95,14 +97,14 @@ html {
   position: relative;
   cursor: default;
   transition: all 0.3s ease;
-  color: var(--heading-color);;
+  color: var(--heading-text-color);
 }
 
 .websites-container-content ul li:before {
   /* Custom bullet style */
   position: absolute;
   left: 0;
-  color: var(--heading-color);; /* Theme color for bullet */
+  color: var(--heading-text-color); /* Theme color for bullet */
   font-size: 1.5rem;
   line-height: 1; /* Align bullet with text */
 }
@@ -178,7 +180,7 @@ html {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: var(--heading-color);;
+  background-color: var(--heading-color);
   color: #C2DFE3;
   padding: 10px;
   transform: translateY(93%);
@@ -243,7 +245,7 @@ html {
 
 .email a {
   text-decoration: none;
-  color: var(--heading-color);;
+  color: var(--heading-text-color);
   transition: all 0.3s ease;
 }
 
@@ -324,12 +326,12 @@ html {
 .name-heading2 {
   text-align: center;
   z-index: 2;
-  color: var(--heading-color);;
+  color: var(--heading-text-color);
 }
 
 .websites-container-name {
   padding-top: 44px;
-  color: var(--heading-color);;
+  color: var(--heading-text-color);
   text-align: center;
   font-size: 2em;
 }
