--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,12 @@ body {
   color: var(--text-color);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
 }
@@ -62,7 +67,7 @@ h1, h2, h3, h4, h5, h6 {
   gap: 20px;
   padding-top: 33px;
   padding-bottom: 33px;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
   background-color: var(--container-color);
 }
 
@@ -77,6 +82,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   padding-top: 33px;
   padding-bottom: 33px;
+  margin-bottom: 2rem;
   z-index: 2;
 }
 
@@ -92,6 +98,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   padding-top: 33px;
   padding-bottom: 33px;
+  margin-bottom: 2rem;
 }
 
 .websites-container-content {
@@ -152,7 +159,7 @@ h1, h2, h3, h4, h5, h6 {
   /* Animation on hover */
   transform: translateX(10px);
   /* Color on hover */
-  color: var(--hover-color); 
+  color: var(--hover-color);
 }
 
 :root[data-theme="light"] {
@@ -193,7 +200,7 @@ h1, h2, h3, h4, h5, h6 {
   content: '•';
   position: absolute;
   left: 0;
-  color: #9DB4C0;
+  color: var(--content-item-color);
   /* Theme color for bullet */
   font-size: 1.5rem;
   line-height: 1;
@@ -202,32 +209,50 @@ h1, h2, h3, h4, h5, h6 {
 .websites-container-content2 ul li:hover {
   /* Animation on hover */
   transform: translateX(10px);
-  color: #9DB4C0;
+  color: var(--hover-color);
 }
 
 .website-preview {
-  background-color: #ffffff;
   width: 300px;
-  border: 1px solid #9DB4C0;
+  border: 1px solid var(--content-item-color);
   border-radius: 8px;
   overflow: hidden;
   position: relative;
   z-index: 2;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  padding: 0;
+  margin-bottom: 6px;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.6);
 }
 
 .website-preview:hover {
   transform: translateY(-5px);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-  border: 1px solid #E0FBFC;
+  border: 1px solid var(--content-item-color);
   transform: scale(1.02);
+}
+
+.website-preview:hover .website-image {
+  opacity: 1;
 }
 
 .website-image {
   width: 100%;
   height: 200px;
-  /* Fixed height for uniform size */
   object-fit: cover;
+  display: block;
+  opacity: 0.93;
+  transition: opacity 0.3s ease;
+}
+
+.info-pane {
+  padding: 10px;
+  background: #fff;
+  margin: 0;
+}
+
+.info-pane p {
+  margin: 0;
+  padding: 0;
 }
 
 .overlay {
@@ -288,7 +313,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: var(--heading-color);
   color: #C2DFE3;
   padding: 10px;
-  transform: translateY(93%);
+  transform: translateY(100%);
   transition: transform 0.3s ease-in-out;
 }
 
@@ -406,6 +431,10 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 2;
 }
 
+.social-link-footer:hover {
+  color: #C2DFE3;
+}
+
 .social-link span {
   margin-left: 8px;
 }
@@ -443,7 +472,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .name-heading a {
-  color: #9DB4C0;
+  color: var(--content-item-color);
 }
 
 .name-heading h2 {
@@ -471,6 +500,276 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   gap: 20px;
   padding-bottom: 33px;
+}
+
+.layout-toggle-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 1rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  padding: 0.5rem;
+  background-color: var(--container-color);
+  border-radius: 8px;
+}
+
+.layout-container-space {
+  flex-grow: 1;
+}
+
+.search-container {
+  position: relative;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.search-icon {
+  background: none;
+  border: none;
+  color: var(--text-color);
+  font-size: 1.2rem;
+  cursor: pointer;
+  padding: 0.5rem;
+  transition: color 0.3s ease;
+}
+
+.search-icon:hover {
+  color: var(--link-color);
+}
+
+.search-input {
+  display: none;
+  position: absolute;
+  right: 100%;
+  top: 0;
+  width: 0;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  font-size: 1rem;
+  transition: width 0.3s ease, padding 0.3s ease;
+}
+
+.search-input:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px var(--link-color);
+}
+
+.search-container:hover .search-input,
+.search-input:focus {
+  display:block;
+  width: 200px;
+  padding: 0.5rem 2.5rem 0.5rem 0.5rem;
+}
+
+.project-toggle {
+  background: none;
+  border: none;
+  color: var(--text-color);
+  font-size: 1.2rem;
+  padding: 0.5rem 1rem;
+  margin: 0 0.25rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.project-toggle:hover {
+  color: var(--heading-text-color);
+  background-color: rgba(114, 57, 57, 0.05);
+}
+
+.project-toggle.active {
+  color: var(--heading-text-color);
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.project-toggle:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px var(--link-color);
+}
+
+.grid-layout .project-image {
+  width: 350px;
+  height: 233px;
+}
+
+.list-layout .project-image {
+  width: 350px;
+  height: 233px;
+}
+
+.list-layout .project-content {
+  align-items: flex-start;
+}
+
+@media (max-width: 768px) {
+
+  .grid-layout .project-image,
+  .list-layout .project-image {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.layout-toggle-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+  background-color: var(--link-color);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 1rem;
+}
+
+.layout-toggle-btn:hover {
+  background-color: var(--link-hover-color);
+}
+
+.layout-toggle-btn svg {
+  margin-right: 0.5rem;
+}
+
+.project-list-item {
+  margin-bottom: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  padding: 1rem;
+  border: 1px solid var(--border-color);
+  border-radius: 8px;
+  background-color: var(--container-color);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+}
+
+.project-list-item:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.project-list-item .project-title {
+  color: var(--heading-text-color);
+  margin-bottom: 1rem;
+  font-size: 1.5em;
+}
+
+.project-list-item .project-content {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.project-list-item .project-content-left .project-content-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-content-right {
+  flex: 1;
+  text-align: left;
+}
+
+.project-list-item .project-image {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+}
+
+.project-list-item .project-info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.project-list-item .project-info p {
+  margin-bottom: 1rem;
+  line-height: 1.6;
+}
+
+.project-list-item .project-link {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: var(--link-color);
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.project-list-item .project-link:hover {
+  background-color: var(--link-hover-color);
+}
+
+.project-list-item .project-improvements h3 {
+  color: var(--heading-text-color);
+  margin-bottom: 0.5rem;
+}
+
+.project-list-item .project-improvements ul {
+  padding-left: 20px;
+  margin: 0;
+}
+
+.project-list-item .project-improvements li {
+  margin-bottom: 0.5rem;
+}
+
+@media (max-width: 768px) {
+  .project-list-item .project-content {
+    flex-direction: column;
+  }
+
+  .project-list-item .project-image {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.server-list {
+  position: relative;
+}
+
+.server-list li {
+  position: relative;
+  padding: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.server-list li:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.server-image {
+  position: absolute;
+  top: 0%;
+  right: calc(69% + 30px);
+  transform: translateY(0%);
+  max-width: 300px;
+  max-height: 200px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+  z-index: 10;
+}
+
+.server-list li:hover .server-image {
+  opacity: 1;
 }
 
 .google-map-container {
