--- a/src/App.css
+++ b/src/App.css
@@ -803,4 +803,11 @@ h6 {
   .right-column {
     max-width: 100%;
   }
+
+  .name-heading h2 {
+    font-size: 2.7em;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+  }
 }
