--- a/src/components/about/AboutSection.css
+++ b/src/components/about/AboutSection.css
@@ -11,6 +11,7 @@
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.7);
   }
   
   .about-content {
@@ -19,4 +20,9 @@
     justify-content: center;
     align-items: center;
     margin-right: 0.5rem;
+    text-shadow: 0px 1px rgba(0, 0, 0, 0.5);
+  }
+
+  .about-content h2 {
+    text-shadow: 1px 4px rgba(0, 0, 0, 0.2);
   }
